// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden seeds > D01 est stable 1`] = `
[
  {
    "answers": [
      "3x^{2} - 6x + 6",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = x^{3} - 3x^{2} + 6x$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "6x^{2} - 6x - 4",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = 2x^{3} - 3x^{2} - 4x + 5$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "-6x",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = -3x^{2} + 4$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D02 est stable 1`] = `
[
  {
    "answers": [
      "-15x^{2} - \\frac{6}{x^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}^*$ par $f(x) = -5x^{3} + \\frac{6}{x} + 6$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "-3x^{2} - \\frac{5}{x^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}^*$ par $f(x) = -x^{3} + \\frac{5}{x} + 2$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "10x - \\frac{4}{x^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}^*$ par $f(x) = 5x^{2} + \\frac{4}{x} - 4$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D03 est stable 1`] = `
[
  {
    "answers": [
      "-8x + \\frac{1}{\\sqrt{x}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = -4x^{2} + 2\\sqrt{x}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "6x + \\frac{1}{2\\sqrt{x}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = 3x^{2} + \\sqrt{x} + 2$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "8x - \\frac{3}{2\\sqrt{x}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = 4x^{2} - 3\\sqrt{x} + 3$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D04 est stable 1`] = `
[
  {
    "answers": [
      "9x^{2} - 20x - 27",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (x - 5)(3x^{2} + 5x - 2)$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "6x^{2} - 6",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (x - 1)(2x^{2} + 2x - 4)$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "-12x^{2} + 32x - 11",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (-2x + 5)(2x^{2} - 3x - 2)$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D05 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{14}{(x + 4)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{-4\\}$ par $f(x) = \\frac{5x + 6}{x + 4}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "-\\frac{2}{x^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{0\\}$ par $f(x) = \\frac{4x + 2}{x}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{16}{(-2x + 8)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{4\\}$ par $f(x) = \\frac{3x - 4}{-2x + 8}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D06 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-3x^{2} + 6x - 6}{(x - 1)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = \\frac{-3x^{2} + 6}{x - 1}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{2x^{2} - 4x + 1}{(x - 1)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = \\frac{2x^{2} + 2x - 3}{x - 1}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{3x^{2} + 12x + 10}{(x + 2)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{-2\\}$ par $f(x) = \\frac{3x^{2} + 3x - 4}{x + 2}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D07 est stable 1`] = `
[
  {
    "answers": [
      "(x - 5)\\mathrm{e}^{x}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (x - 6)\\mathrm{e}^{x}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "x\\mathrm{e}^{x}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (x - 1)\\mathrm{e}^{x}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "(-3x + 3)\\mathrm{e}^{x}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (-3x + 6)\\mathrm{e}^{x}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D08 est stable 1`] = `
[
  {
    "answers": [
      "\\ln(x) + \\frac{x - 6}{x}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = (x - 6)\\ln(x)$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\ln(x) + \\frac{x - 1}{x}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = (x - 1)\\ln(x)$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "-3\\ln(x) + \\frac{-3x + 6}{x}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = (-3x + 6)\\ln(x)$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D09 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-12x - 6}{(x^{2} + x + 1)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = \\frac{6}{x^{2} + x + 1}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{-10x - 5}{(x^{2} + x + 3)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = \\frac{5}{x^{2} + x + 3}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{-8x + 8}{(x^{2} - 2x + 6)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = \\frac{4}{x^{2} - 2x + 6}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D10 est stable 1`] = `
[
  {
    "answers": [
      "4\\mathrm{e}^{4x + 5}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = \\mathrm{e}^{4x + 5}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "3\\mathrm{e}^{3x + 2}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = \\mathrm{e}^{3x + 2}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "(-4x + 6)\\mathrm{e}^{x^{2} - 3x}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = -2\\mathrm{e}^{x^{2} - 3x}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D11 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{2x}{x^{2} + 1}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = \\ln(x^{2} + 1)$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{2x}{x^{2} + 5}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = \\ln(x^{2} + 5)$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{5}{5x - 15}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]{3}\\,;\\,+\\infty[$ par $f(x) = \\ln(5x - 15)$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D12 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{2}{\\sqrt{4x + 16}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]{-4}\\,;\\,+\\infty[$ par $f(x) = \\sqrt{4x + 16}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{2}{\\sqrt{4x}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]{0}\\,;\\,+\\infty[$ par $f(x) = \\sqrt{4x}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{1}{\\sqrt{2x - 8}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]{4}\\,;\\,+\\infty[$ par $f(x) = \\sqrt{2x - 8}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D13 est stable 1`] = `
[
  {
    "answers": [
      "-16(-4x + 5)^{3}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (-4x + 5)^{4}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "12(3x + 2)^{3}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (3x + 2)^{4}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "12(4x + 3)^{2}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (4x + 3)^{3}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D14 est stable 1`] = `
[
  {
    "answers": [
      "(-x + 6)\\mathrm{e}^{-x + 3}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (x - 5)\\mathrm{e}^{-x + 3}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "(3x - 2)\\mathrm{e}^{3x + 1}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (x - 1)\\mathrm{e}^{3x + 1}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "(-4x + 8)\\mathrm{e}^{2x - 2}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R}$ par $f(x) = (-2x + 5)\\mathrm{e}^{2x - 2}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D15 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{(-3x + 6)\\mathrm{e}^{x}}{(x - 1)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = -\\frac{3\\mathrm{e}^{x}}{x - 1}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{(-x + 2)\\mathrm{e}^{x}}{(x - 1)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = -\\frac{\\mathrm{e}^{x}}{x - 1}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{(3x + 3)\\mathrm{e}^{x}}{(x + 2)^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{-2\\}$ par $f(x) = \\frac{3\\mathrm{e}^{x}}{x + 2}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > D16 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{-\\ln(x) + 6}{x^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = \\frac{\\ln(x) - 5}{x}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{-\\ln(x) + 2}{x^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = \\frac{\\ln(x) - 1}{x}$. Calculer $f'(x)$.",
  },
  {
    "answers": [
      "\\frac{2\\ln(x) - 7}{x^{2}}",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = \\frac{-2\\ln(x) + 5}{x}$. Calculer $f'(x)$.",
  },
]
`;

exports[`golden seeds > L01 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = x^{3} - 3x^{2} + 6x$. Déterminer $\\lim_{x \\to -\\infty} f(x)$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = 2x^{3} - 3x^{2} - 4x + 5$. Déterminer $\\lim_{x \\to -\\infty} f(x)$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = -3x^{2} + 4$. Déterminer $\\lim_{x \\to -\\infty} f(x)$.",
  },
]
`;

exports[`golden seeds > L02 est stable 1`] = `
[
  {
    "answers": [
      ""0"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = -5\\mathrm{e}^{x}$. Déterminer $\\lim_{x \\to -\\infty} f(x)$.",
  },
  {
    "answers": [
      ""5"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = -\\mathrm{e}^{x} + 5$. Déterminer $\\lim_{x \\to -\\infty} f(x)$.",
  },
  {
    "answers": [
      ""6"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\frac{4}{x} + 6$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
]
`;

exports[`golden seeds > L03 est stable 1`] = `
[
  {
    "answers": [
      ""-\\\\frac{59}{3}"",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = \\frac{-4x^{2} + 5}{x - 1}$. Déterminer $\\lim_{x \\to 4} f(x)$.",
  },
  {
    "answers": [
      ""4"",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = \\frac{3x^{2} + 2x - 4}{x - 1}$. Déterminer $\\lim_{x \\to 0} f(x)$.",
  },
  {
    "answers": [
      ""\\\\frac{19}{4}"",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{-2\\}$ par $f(x) = \\frac{4x^{2} + 3x - 3}{x + 2}$. Déterminer $\\lim_{x \\to 2} f(x)$.",
  },
]
`;

exports[`golden seeds > L04 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\frac{x^{3} - 2x^{2} + 5x}{-4x^{2} - 1}$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\frac{x^{3} - 2x^{2} - 4x + 4}{4x^{2}}$. Déterminer $\\lim_{x \\to -\\infty} f(x)$.",
  },
  {
    "answers": [
      ""\\\\frac{1}{2}"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\frac{-2x^{2} + 3}{-4x^{2} - 5x + 3}$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
]
`;

exports[`golden seeds > L05 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = -\\frac{4x}{x - 1}$. Déterminer $\\lim_{x \\to 1^{-}} f(x)$ et $\\lim_{x \\to 1^{+}} f(x)$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = \\frac{3x + 2}{x - 1}$. Déterminer $\\lim_{x \\to 1^{-}} f(x)$ et $\\lim_{x \\to 1^{+}} f(x)$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{-2\\}$ par $f(x) = \\frac{4x + 4}{x + 2}$. Déterminer $\\lim_{x \\to -2^{-}} f(x)$ et $\\lim_{x \\to -2^{+}} f(x)$.",
  },
]
`;

exports[`golden seeds > L06 est stable 1`] = `
[
  {
    "answers": [
      ""18"",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = \\frac{3x^{2} + 12x - 15}{x - 1}$. Déterminer $\\lim_{x \\to 1} f(x)$.",
  },
  {
    "answers": [
      ""4"",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{1\\}$ par $f(x) = \\frac{2x^{2} - 2}{x - 1}$. Déterminer $\\lim_{x \\to 1} f(x)$.",
  },
  {
    "answers": [
      ""-14"",
    ],
    "statement": "Soit $f$ la fonction définie sur $\\mathbb{R} \\setminus \\{-2\\}$ par $f(x) = \\frac{2x^{2} - 6x - 20}{x + 2}$. Déterminer $\\lim_{x \\to -2} f(x)$.",
  },
]
`;

exports[`golden seeds > L07 est stable 1`] = `
[
  {
    "answers": [
      ""1"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\sqrt{x^{2} + 2x + 1} - x$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
  {
    "answers": [
      ""\\\\frac{1}{2}"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\sqrt{x^{2} + x + 5} - x$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
  {
    "answers": [
      ""-\\\\frac{3}{2}"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\sqrt{x^{2} - 3x + 9} - x$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
]
`;

exports[`golden seeds > L08 est stable 1`] = `
[
  {
    "answers": [
      ""0"",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = \\frac{\\ln(x)}{x}$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\mathrm{e}^{x} - 5x^{2}$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
  {
    "answers": [
      ""0"",
    ],
    "statement": "Soit $f$ la fonction définie sur $]0\\,;\\,+\\infty[$ par $f(x) = -3x^{3}\\ln(x)$. Déterminer $\\lim_{x \\to 0^{+}} f(x)$.",
  },
]
`;

exports[`golden seeds > L09 est stable 1`] = `
[
  {
    "answers": [
      ""3"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\frac{\\ln(3x + 1)}{x}$. Déterminer $\\lim_{x \\to 0} f(x)$.",
  },
  {
    "answers": [
      ""3"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\frac{\\ln(3x + 1)}{x}$. Déterminer $\\lim_{x \\to 0} f(x)$.",
  },
  {
    "answers": [
      ""-1"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\frac{\\ln(-3x + 1)}{3x}$. Déterminer $\\lim_{x \\to 0} f(x)$.",
  },
]
`;

exports[`golden seeds > L10 est stable 1`] = `
[
  {
    "answers": [
      ""\\\\ln(2)"",
    ],
    "statement": "Soit $f$ la fonction définie sur un intervalle de la forme $]A\\,;\\,+\\infty[$ par $f(x) = \\ln\\left(\\frac{2x}{x + 5}\\right)$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
  {
    "answers": [
      ""\\\\ln(4)"",
    ],
    "statement": "Soit $f$ la fonction définie sur un intervalle de la forme $]A\\,;\\,+\\infty[$ par $f(x) = \\ln\\left(\\frac{4x + 4}{x + 4}\\right)$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
  {
    "answers": [
      ""\\\\mathrm{e}^{4}"",
    ],
    "statement": "Soit $f$ la fonction par $f(x) = \\mathrm{e}^{\\frac{4x + 3}{x + 2}}$. Déterminer $\\lim_{x \\to +\\infty} f(x)$.",
  },
]
`;

exports[`golden seeds > L11 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer $\\lim_{x \\to \\frac{69}{4}^{-}} \\frac{4}{x - \\frac{69}{4}}$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer $\\lim_{x \\to 14^{-}} \\frac{3}{x - 14}$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":-1}",
    ],
    "statement": "Déterminer $\\lim_{x \\to 12^{+}} -\\frac{8}{x - 12}$.",
  },
]
`;

exports[`golden seeds > L12 est stable 1`] = `
[
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Déterminer $\\lim_{x \\to -\\infty} \\frac{5x^{3} - 6x^{3} - x^{2} + 9}{-8x - \\frac{37}{3}}$.",
  },
  {
    "answers": [
      "{"kind":"infinity","sign":1}",
    ],
    "statement": "Déterminer $\\lim_{x \\to -\\infty} \\frac{-6x - 5x^{2} + 8x + 5x^{3} - 6}{\\frac{49}{3}x + \\frac{26}{3} - \\frac{67}{3}x^{2}}$.",
  },
  {
    "answers": [
      ""0"",
    ],
    "statement": "Déterminer $\\lim_{x \\to -\\infty} \\frac{\\frac{35}{2} - 4x}{-2x^{4} + x^{2} + 8x^{4}}$.",
  },
]
`;

exports[`golden seeds > V01 est stable 1`] = `
[
  {
    "answers": [
      "8",
      "-+,0,",
    ],
    "statement": "Étudier le signe de la fonction $f$ définie sur $\\mathbb{R}$ par $f(x) = x - 8$.",
  },
  {
    "answers": [
      "1",
      "-+,0,",
    ],
    "statement": "Étudier le signe de la fonction $f$ définie sur $\\mathbb{R}$ par $f(x) = x - 1$.",
  },
  {
    "answers": [
      "\\frac{8}{3}",
      "+-,0,",
    ],
    "statement": "Étudier le signe de la fonction $f$ définie sur $\\mathbb{R}$ par $f(x) = -3x + 8$.",
  },
]
`;

exports[`golden seeds > V02 est stable 1`] = `
[
  {
    "answers": [
      "",
      "+,",
    ],
    "statement": "Étudier le signe de $f(x) = x^{2} + 6$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "3;5",
      "+-+,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = x^{2} - 8x + 15$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "2;3",
      "-+-,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = -2x^{2} + 10x - 12$ sur $\\mathbb{R}$.",
  },
]
`;

exports[`golden seeds > V03 est stable 1`] = `
[
  {
    "answers": [
      "2x + 8",
      "-+,0,|down,up",
      ""-16"",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = x^{2} + 8x$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "2x",
      "-+,0,|down,up",
      ""5"",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = x^{2} + 5$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "-4x + 16",
      "+-,0,|up,down",
      ""36"",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = -2x^{2} + 16x + 4$ sur $\\mathbb{R}$.",
  },
]
`;

exports[`golden seeds > V04 est stable 1`] = `
[
  {
    "answers": [
      "-2;5",
      "++-,,0,|-++,0,,|-+-,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = (-3x + 15)(3x + 6)$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "-4;0",
      "-++,0,,|--+,,0,|+-+,0,0,",
    ],
    "statement": "Étudier le signe de $f(x) = (2x + 8)x$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "-3;-2",
      "-++,0,,|--+,,||,|+-+,0,||,",
    ],
    "statement": "Étudier le signe de $f(x) = \\frac{3x + 9}{2x + 4}$ sur $\\mathbb{R} \\setminus \\{-2\\}$.",
  },
]
`;

exports[`golden seeds > V05 est stable 1`] = `
[
  {
    "answers": [
      "-6x^{2} + 18x - 12",
      "1;2",
      "-+-,0,0,|down,up,down",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = -2x^{3} + 9x^{2} - 12x + 5$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "6x^{2} - 12x",
      "0;2",
      "+-+,0,0,|up,down,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = 2x^{3} - 6x^{2} + 2$ sur $\\mathbb{R}$.",
  },
  {
    "answers": [
      "6x^{2} - 12x - 48",
      "-2;4",
      "+-+,0,0,|up,down,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = 2x^{3} - 6x^{2} - 48x - 3$ sur $\\mathbb{R}$.",
  },
]
`;

exports[`golden seeds > V06 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{14}{(x + 4)^{2}}",
      "++,||,|up,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = \\frac{5x + 6}{x + 4}$ sur $\\mathbb{R} \\setminus \\{-4\\}$.",
  },
  {
    "answers": [
      "-\\frac{2}{x^{2}}",
      "--,||,|down,down",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = \\frac{4x + 2}{x}$ sur $\\mathbb{R} \\setminus \\{0\\}$.",
  },
  {
    "answers": [
      "\\frac{16}{(-2x + 8)^{2}}",
      "++,||,|up,up",
    ],
    "statement": "Dresser le tableau de variations de $f(x) = \\frac{3x - 4}{-2x + 8}$ sur $\\mathbb{R} \\setminus \\{4\\}$.",
  },
]
`;

exports[`golden seeds > V07 est stable 1`] = `
[
  {
    "answers": [
      "(x + 3)\\mathrm{e}^{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-\\\\mathrm{e}^{-3}"",
    ],
    "statement": "Étudier les variations de $f(x) = (x + 2)\\mathrm{e}^{x}$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "x\\mathrm{e}^{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-1"",
    ],
    "statement": "Étudier les variations de $f(x) = (x - 1)\\mathrm{e}^{x}$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "(-2x + 6)\\mathrm{e}^{x}",
      "+-,0,|++,,|+-,0,|up,down",
      ""2\\\\mathrm{e}^{3}"",
    ],
    "statement": "Étudier les variations de $f(x) = (-2x + 8)\\mathrm{e}^{x}$ sur $\\mathbb{R}$, limites comprises.",
  },
]
`;

exports[`golden seeds > V08 est stable 1`] = `
[
  {
    "answers": [
      "\\frac{x - 4}{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-4\\\\ln(4)"",
    ],
    "statement": "Étudier les variations de $f(x) = x - 4\\ln(x) - 4$ sur $]0\\,;\\,+\\infty[$, limites comprises.",
  },
  {
    "answers": [
      "\\frac{x - 4}{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-4\\\\ln(4) + 4"",
    ],
    "statement": "Étudier les variations de $f(x) = x - 4\\ln(x)$ sur $]0\\,;\\,+\\infty[$, limites comprises.",
  },
  {
    "answers": [
      "\\frac{x - 2}{x}",
      "-+,0,|++,,|-+,0,|down,up",
      ""-2\\\\ln(2) + 6"",
    ],
    "statement": "Étudier les variations de $f(x) = x - 2\\ln(x) + 4$ sur $]0\\,;\\,+\\infty[$, limites comprises.",
  },
]
`;

exports[`golden seeds > V09 est stable 1`] = `
[
  {
    "answers": [
      "\\mathrm{e}^{x} - 4",
      "\\ln(4)",
      "-+,0,|down,up",
      ""-4\\\\ln(4)"",
    ],
    "statement": "Étudier les variations de $f(x) = \\mathrm{e}^{x} - 4x - 4$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "\\mathrm{e}^{x} - 4",
      "\\ln(4)",
      "-+,0,|down,up",
      ""-4\\\\ln(4) + 4"",
    ],
    "statement": "Étudier les variations de $f(x) = \\mathrm{e}^{x} - 4x$ sur $\\mathbb{R}$, limites comprises.",
  },
  {
    "answers": [
      "\\mathrm{e}^{x} - 2",
      "\\ln(2)",
      "-+,0,|down,up",
      ""-2\\\\ln(2) + 6"",
    ],
    "statement": "Étudier les variations de $f(x) = \\mathrm{e}^{x} - 2x + 4$ sur $\\mathbb{R}$, limites comprises.",
  },
]
`;
